# download-sdl2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  sdl2-config.cmake
src/: dumb.cpp
test/: CMakeLists.txt
test/src/: sdl_image_test.cpp  sdl_mixer_test.cpp  sdl_test.cpp  sdl_ttf_test.cpp
